[package]
name = "arecibo"
authors = []
version = "0.1.0"
edition = "2018"

[dependencies]
gumdrop = "0.7"
serde = { version = "1", features = ["serde_derive"] }
abscissa_tokio = { version = "=0.6.0-pre.1" }
thiserror = "1"
tendermint-rpc = { version = "0.18", features = ["http-client"] }
tendermint = { version = "0.18", features = [] }
serde_json = "1.0.62"
tokio = {version ="1.2.0",features =["io-util"]}

[dependencies.abscissa_core]
version = "0.6.0-pre.1"
# optional: use `gimli` to capture backtraces
# see https://github.com/rust-lang/backtrace-rs/issues/189
# features = ["gimli-backtrace"]

[dev-dependencies]
abscissa_core = { version = "0.6.0-pre.1", features = ["testing"] }
once_cell = "1.2"

